--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "playshifu": "file:",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-fast-marquee": "^1.6.5",
+    "react-icon": "^1.0.0",
+    "react-icons": "^5.5.0",
     "tailwindcss": "^4.1.3"
   },
   "devDependencies": {
